[package]
name = "eastl-rs"
authors = ["Andrew Buck"]
description = "EASTL binary-compatible Rust implementations"
documentation = "https://docs.rs/crate/eastl-rs"
version = "0.4.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/MrElectrify/EASTL-rs"
keywords = ["EASTL", "STL"]

[dependencies]
superslice = "1.0"

[dev-dependencies]
memoffset = "0.6.5"
