[package]
name = "eastl-rs"
authors = ["Andrew Buck"]
description = "EASTL binary-compatible Rust implementations"
documentation = "https://docs.rs/crate/eastl-rs"
version = "0.16.4"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MrElectrify/EASTL-rs"
keywords = ["EASTL", "STL"]

[features]
nightly = []

[dependencies]
duplicate = "2.0"
itertools = "0.14"
moveit = "0.6.0"
superslice = "1.0"

[dev-dependencies]
memoffset = "0.9"
